# abide-dann-cv

./: .gitignore  LICENSE  README.es.md  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: INFORME_FINAL.md  Presentacion TP.html  contexto_proyecto.md  cortes_mni_y_mapas_derivados.md  referencias.md
paper/: informe_paper.tex  referencias.bib
results_dann/: best_model.pth  classification_report.txt  metrics_summary.json
results_no_dann/: best_model.pth  classification_report.txt  metrics_summary.json
results_tune/: best_params.toml
scripts/: compare_dann.py  dataset.py  downloader.py  evaluate.py  model.py  report.py  train.py  tune.py  validate_labels.py
statistical_analysis/: optimal_slices.json  vbm_analysis.py
